feat: Implement authentication and role-based access control
- Added RequireAuth component for protecting routes based on user roles.
- Created auth middleware for backend to handle JWT verification and role checks.
- Developed models for Learner, Institution, and Certificate to manage user data and issued credentials.
- Implemented registration and login functionality for both Learners and Institutions.
- Created routes for issuing and verifying certificates, including public verification endpoint.
- Enhanced frontend with navigation, dashboards for Learners and Institutions, and improved UI/UX.
- Added API service for handling requests to the backend.
- Updated styles for a cohesive look and feel across the application.

--- a/mern-docker-app/docker-compose.yml
+++ b/mern-docker-app/docker-compose.yml
@@ -17,9 +17,10 @@ services:
     build: ./backend
     container_name: backend
     ports:
-      - "5000:5000"
+      - "8080:8080"
     environment:
       - MONGODB_URI=mongodb://mongo:27017/mernapp
+      - PORT=8080
     depends_on:
       - mongo
     networks:
