--- a/mern-docker-app/backend/package.json
+++ b/mern-docker-app/backend/package.json
@@ -14,8 +14,12 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "csv-parser": "^3.0.0",
     "mongoose": "^7.0.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "ethers": "^6.14.0",
+    "ipfs-http-client": "^59.0.0",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
