feat: Add About, Contact, and Features pages with detailed content and styling
- Implemented About page with platform features, team information, and statistics.
- Created Contact page with a form for inquiries, contact methods, and FAQs.
- Developed Features page highlighting core features, technical capabilities, and use cases.
- Added responsive design and interactive elements using Tailwind CSS and Boxicons.
- Included test scripts for batch upload, verification API, and blockchain wallet interactions.

--- a/mern-docker-app/backend/.env.example
+++ b/mern-docker-app/backend/.env.example
@@ -1,13 +1,25 @@
-# Backend environment variables
-MONGO_URL=mongodb://mongo:27017/moducert
-JWT_SECRET=your_jwt_secret
+# Server
+PORT=8080
+NODE_ENV=development
+MONGODB_URI=mongodb://mongo:27017/legitdoc
 
-# Blockchain / Hardhat
-PROVIDER_URL=http://127.0.0.1:8545
-PRIVATE_KEY=0xYOUR_PRIVATE_KEY_FOR_DEPLOYER
-CONTRACT_ADDRESS=0x...
+# JWT / Auth
+JWT_SECRET=change_me_in_production
+JWT_EXPIRE=30d
 
-# IPFS
-IPFS_API_URL=http://127.0.0.1:5001
-IPFS_PROJECT_ID=
-IPFS_PROJECT_SECRET=
+# Polygon / Smart Contract Anchoring
+POLYGON_RPC_URL=https://rpc-amoy.polygon.technology
+CONTRACT_ADDRESS=0xYourLegitAnchorContract
+ISSUER_PRIVATE_KEY=0xyour_private_key_with_issuer_rights
+ISSUER_WALLET_ADDRESS=0xIssuerWallet
+
+# IPFS (optional). Set USE_IPFS=true to upload PDFs to IPFS
+USE_IPFS=false
+IPFS_ENDPOINT=http://127.0.0.1:5001
+
+# Issuer / Verification URLs
+VERIFICATION_BASE_URL=https://your-frontend.example.com
+API_BASE_URL=http://localhost:8080
+
+# Logging
+LOG_LEVEL=info
