--- a/mern-docker-app/backend/package.json
+++ b/mern-docker-app/backend/package.json
@@ -1,27 +1,49 @@
 {
   "name": "mern-docker-app-backend",
   "version": "1.0.0",
-  "description": "Backend for MERN Docker App",
+  "description": "Backend for MERN Docker App with LegitDoc-style Certificate Verification",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest --coverage",
+    "lint": "eslint . --ext .js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bull": "^4.12.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "multer": "^1.4.5-lts.1",
+    "csv-parse": "^5.5.3",
     "csv-parser": "^3.0.0",
-    "mongoose": "^7.0.3",
-    "uuid": "^9.0.0",
+    "dotenv": "^16.0.3",
     "ethers": "^6.14.0",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "http-status-codes": "^2.2.0",
     "ipfs-http-client": "^59.0.0",
-    "qrcode": "^1.5.3"
+    "jsonwebtoken": "^9.0.0",
+    "merkle-tree-gen": "^1.1.0",
+    "merkletreejs": "^0.3.9",
+    "mongoose": "^7.0.3",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "puppeteer": "^21.3.6",
+    "qrcode": "^1.5.3",
+    "redis": "^4.6.7",
+    "uuid": "^9.0.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "eslint": "^8.46.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
+    "prettier": "^3.0.0",
+    "supertest": "^6.3.3"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
