feat: Add Issuer Dashboard with certificate management features
- Implemented IssuerDashboard component for managing certificates, courses, and proofs.
- Added functionality for issuing single and batch certificates, managing courses, and handling proof reviews.
- Integrated feedback messages for user actions and loading states.
- Updated navigation and statistics display for better user experience.

fix: Update login redirection for institution role

- Changed redirection path for institution role to include tab parameter for issuing certificates.

fix: Correct API endpoint in batch upload scripts

- Updated PowerShell and Node.js test scripts to use the correct API endpoint for batch certificate uploads.

--- a/mern-docker-app/frontend/nginx.conf
+++ b/mern-docker-app/frontend/nginx.conf
@@ -5,6 +5,18 @@ server {
         root /usr/share/nginx/html;
         index index.html index.htm;
         try_files $uri $uri/ /index.html;
+        
+        # Disable caching for HTML to ensure updates are loaded
+        add_header Cache-Control "no-cache, no-store, must-revalidate" always;
+        add_header Pragma "no-cache" always;
+        add_header Expires "0" always;
+    }
+    
+    # Cache static assets but allow revalidation
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        root /usr/share/nginx/html;
+        expires 1h;
+        add_header Cache-Control "public, must-revalidate" always;
     }
     
     # Proxy API requests to the backend
