PDF Upload changes

--- a/mern-docker-app/.env
+++ b/mern-docker-app/.env
@@ -18,7 +18,7 @@ CONTRACT_ADDRESS=0x5FbDB2315678afecb367f032d93F642f64180aa3
 # Environment settings
 NODE_ENV=development
 PORT=8080
-MONGODB_URI=mongodb://mongo:27017/mernapp
+MONGODB_URI=mongodb://127.0.0.1:27017/mernapp
 JWT_SECRET=your_super_secret_jwt_key_change_in_production
 JWT_EXPIRE=30d
 
