--- a/mern-docker-app/backend/package.json
+++ b/mern-docker-app/backend/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.17.2",
     "puppeteer": "^21.3.6",
     "qrcode": "^1.5.3",
     "redis": "^4.6.7",
