--- a/mern-docker-app/backend/.env.example
+++ b/mern-docker-app/backend/.env.example
@@ -1,7 +1,32 @@
+# Copy this file to .env and fill in values. Do NOT commit .env (it's ignored).
+
+# Server
+PORT=8080
+API_URL=http://localhost:8080
+FRONTEND_URL=http://localhost:3000
+
+# MongoDB (example local URI)
+MONGODB_URI=mongodb://localhost:27017/legitdoc
+
+# SMTP (for sending certificate emails)
+# If using Gmail, create an App Password and use it as SMTP_PASSWORD
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=ksrujan026@gmail.com
+SMTP_PASSWORD=ounmbtbgricophvc
+SMTP_FROM="Issuing Institution <no-reply@example.com>"
+
+# Optional: gridfs bucket name (used to store artifacts)
+CERTIFICATE_BUCKET_NAME=certificateArtifacts
+
+# Optional: blockchain/anchor settings
+PRIVATE_KEY=
+RPC_URL=
+CONTRACT_ADDRESS=
 # Server
 PORT=8080
 NODE_ENV=development
-MONGODB_URI=mongodb://mongo:27017/legitdoc
+MONGODB_URI=mongodb://localhost:27017/legitdoc
 
 # JWT / Auth
 JWT_SECRET=change_me_in_production
