--- a/mern-docker-app/backend/package.json
+++ b/mern-docker-app/backend/package.json
@@ -28,8 +28,10 @@
     "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "pdfkit": "^0.17.2",
     "puppeteer": "^21.3.6",
     "qrcode": "^1.5.3",
+    "nodemailer": "^6.9.4",
     "redis": "^4.6.7",
     "uuid": "^9.0.0",
     "winston": "^3.8.2"
