--- a/mern-docker-app/frontend/package.json
+++ b/mern-docker-app/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://backend:8080",
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@splinetool/react-spline": "^4.1.0",
     "@testing-library/dom": "^10.4.1",
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.22",
+    "http-proxy-middleware": "^3.0.5",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18"
   }
