update MongoDB URI in .env.example and modify deployed address in deployed-address.json

--- a/mern-docker-app/backend/.env.example
+++ b/mern-docker-app/backend/.env.example
@@ -6,7 +6,7 @@ API_URL=http://localhost:8080
 FRONTEND_URL=http://localhost:3000
 
 # MongoDB (example local URI)
-MONGODB_URI=mongodb://localhost:27017/legitdoc
+MONGODB_URI=mongodb+srv://prashugowda179_db_user:e6r64i4grlSD5yxd@cluster0.antybto.mongodb.net/?appName=Cluster0
 
 # SMTP (for sending certificate emails)
 # If using Gmail, create an App Password and use it as SMTP_PASSWORD
