feat: integrate digilocker with student dashboard, auth context, and document management

--- a/mern-docker-app/docker-compose.yml
+++ b/mern-docker-app/docker-compose.yml
@@ -45,6 +45,19 @@ services:
       - "3000:80"
     depends_on:
       - backend
+      - digimocker
+    networks:
+      - mern-network
+    restart: unless-stopped
+
+  # Digimocker (optional digilocker microservice)
+  digimocker:
+    build: ./digimocker
+    container_name: digimocker
+    ports:
+      - "3001:3000"
+    environment:
+      - PORT=3000
     networks:
       - mern-network
     restart: unless-stopped
