--- a/mern-docker-app/frontend/package.json
+++ b/mern-docker-app/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "boxicons": "^2.1.4",
+    "lucide-react": "^0.271.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3",
