--- a/mern-docker-app/backend/package.json
+++ b/mern-docker-app/backend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@pdf-lib/fontkit": "^1.1.1",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "bull": "^4.12.0",
     "cors": "^2.8.5",
