--- a/mern-docker-app/backend/package.json
+++ b/mern-docker-app/backend/package.json
@@ -21,6 +21,7 @@
     "ethers": "^6.14.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "handlebars": "^4.7.7",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.2.0",
     "ipfs-http-client": "^59.0.0",
@@ -33,7 +34,7 @@
     "nodemailer": "^6.9.4",
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.2",
-    "puppeteer": "^21.3.6",
+    "puppeteer": "^21.11.0",
     "qrcode": "^1.5.3",
     "redis": "^4.6.7",
     "uuid": "^9.0.0",
